# mj_sign

./: .gitignore  PROMPT_LLM_INTEGRATION.md  README.md  README_en.md  README_ko.md  architecture_v2_proposal.md  architecture_v2_proposal_ko.md  docker-compose.kafka.yml  docker-compose.rabbitmq.yml  docker-compose.stack.kafka.yml  docker-compose.stack.rabbitmq.yml
schema/: landmark.proto
scripts/: send_websocket_probe.py  verify_kafka_stack.sh  verify_rabbitmq_stack.sh
sign_bridge/: build.gradle  build.gradle.kts  settings.gradle
sign_gemma_mock/: logger_config.py  main.py  sign_gemma_model.py
sign_gemma_mock/schema/: landmark_pb2.py
sign_web_app/: capacitor.config.ts  index.html  package-lock.json  package.json
sign_web_app/android/app/: build.gradle
sign_web_app/src/: App.tsx  index.css
sign_web_app/src-tauri/: tauri.conf.json
sign_web_app/src-tauri/capabilities/: default.json
sign_web_app/src/proto/: landmark.d.ts  landmark.js
sign_web_app/src/services/: signService.ts
slr_input_kit/: .metadata  README.md  ffigen.yaml  pubspec.yaml  test_integration.dart
slr_input_kit/android/: build.gradle  settings.gradle
slr_input_kit/example/: README.md  pubspec.yaml
slr_input_kit/ios/: slr_input_kit.podspec
slr_input_kit/lib/: slr_input_kit.dart  slr_input_kit_bindings_generated.dart
slr_input_kit/macos/: slr_input_kit.podspec
slr_input_kit/src/: CMakeLists.txt  slr_input_kit.c  slr_input_kit.h
slr_input_kit/windows/: CMakeLists.txt
web_sample/: DETAILED_GUIDE.md  README.md  app.js  index.html  style.css
(+90 files in other folders)
